--- a/contract-assistant-ui-new.html
+++ b/contract-assistant-ui-new.html
@@ -194,41 +194,30 @@
                     Welcome Back
                   </h1>
                   <p class="text-[14px] text-slate-500 leading-[24px]">
-                    Sign in to continue
+                    Enter your email to sign in
                   </p>
                 </div>
 
-                <!-- Form -->
+                <!-- Form - Step 1: Email Input Only -->
                 <div class="space-y-[16px] mb-[24px]">
                   <div>
                     <label
                       class="block text-[12px] font-medium text-slate-600 mb-[8px] ml-[4px]"
-                      >Email</label
+                      >Email Address</label
                     >
                     <input
                       type="email"
-                      value="user@example.com"
-                      class="w-full h-[52px] px-[16px] bg-white border border-slate-200 rounded-[14px] text-[14px] text-black focus:border-slate-400 focus:ring-4 focus:ring-slate-100 focus:outline-none transition-all shadow-sm"
-                    />
-                  </div>
-                  <div>
-                    <label
-                      class="block text-[12px] font-medium text-slate-600 mb-[8px] ml-[4px]"
-                      >Password</label
-                    >
-                    <input
-                      type="password"
-                      value="********"
+                      placeholder="user@example.com"
                       class="w-full h-[52px] px-[16px] bg-white border border-slate-200 rounded-[14px] text-[14px] text-black focus:border-slate-400 focus:ring-4 focus:ring-slate-100 focus:outline-none transition-all shadow-sm"
                     />
                   </div>
                 </div>
 
-                <!-- Sign In Button -->
+                <!-- Send Code Button -->
                 <button
                   class="w-full h-[52px] gradient-header text-white text-[14px] font-semibold rounded-[14px] btn-hover touch-target shadow-lg"
                 >
-                  Sign In
+                  Send Code
                 </button>
 
                 <!-- Divider -->
@@ -282,7 +271,123 @@
               </div>
             </div>
           </div>
-          <p class="mt-[16px] text-[14px] font-medium text-slate-600">Login</p>
+          <p class="mt-[16px] text-[14px] font-medium text-slate-600">
+            Login - Step 1
+          </p>
+        </div>
+
+        <!-- Screen 0b: Login - Step 2 (After Send Code) -->
+        <div class="flex flex-col items-center">
+          <div
+            class="w-full max-w-[390px] bg-white rounded-[32px] shadow-xl overflow-hidden"
+            style="aspect-ratio: 9/16"
+          >
+            <div class="h-full flex flex-col gradient-bg">
+              <!-- Screen Content -->
+              <div class="flex-1 flex flex-col px-[24px] py-[32px]">
+                <!-- Logo -->
+                <div class="flex-1 flex flex-col items-center justify-center">
+                  <div
+                    class="w-[80px] h-[80px] rounded-[20px] gradient-header placeholder-icon mb-[24px] shadow-lg"
+                  >
+                    <span class="text-white text-[36px]">📄</span>
+                  </div>
+                  <h1 class="text-[28px] font-bold text-black mb-[8px]">
+                    Verify Email
+                  </h1>
+                  <p
+                    class="text-[14px] text-slate-500 leading-[24px] text-center px-[16px]"
+                  >
+                    Enter the code sent to<br />user@example.com
+                  </p>
+                </div>
+
+                <!-- Form - Step 2: Verification Code Input -->
+                <div class="space-y-[16px] mb-[16px]">
+                  <div>
+                    <label
+                      class="block text-[12px] font-medium text-slate-600 mb-[8px] ml-[4px]"
+                      >Verification Code</label
+                    >
+                    <input
+                      type="text"
+                      placeholder="Enter 8-digit code"
+                      maxlength="8"
+                      class="w-full h-[52px] px-[16px] bg-white border border-slate-200 rounded-[14px] text-[14px] text-black text-center tracking-wider font-semibold focus:border-slate-400 focus:ring-4 focus:ring-slate-100 focus:outline-none transition-all shadow-sm"
+                    />
+                  </div>
+                </div>
+
+                <!-- Verify & Login Button -->
+                <button
+                  class="w-full h-[52px] gradient-header text-white text-[14px] font-semibold rounded-[14px] btn-hover touch-target shadow-lg mb-[16px]"
+                >
+                  Verify & Login
+                </button>
+
+                <!-- Back to Edit Email -->
+                <div class="text-center">
+                  <button
+                    class="text-[13px] text-slate-600 hover:text-slate-800 transition-colors"
+                  >
+                    ← Back to edit email
+                  </button>
+                </div>
+
+                <!-- Divider -->
+                <div class="flex items-center my-[24px]">
+                  <div class="flex-1 h-[1px] bg-slate-200"></div>
+                  <span class="px-[16px] text-[12px] text-slate-400"
+                    >Or continue with</span
+                  >
+                  <div class="flex-1 h-[1px] bg-slate-200"></div>
+                </div>
+
+                <!-- Social Buttons -->
+                <div class="flex gap-[12px]">
+                  <button
+                    class="flex-1 h-[52px] bg-white border border-slate-200 rounded-[14px] flex items-center justify-center btn-hover touch-target shadow-sm"
+                  >
+                    <svg width="20" height="20" viewBox="0 0 24 24">
+                      <path
+                        d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
+                        fill="#4285F4"
+                      />
+                      <path
+                        d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+                        fill="#34A853"
+                      />
+                      <path
+                        d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+                        fill="#FBBC05"
+                      />
+                      <path
+                        d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+                        fill="#EA4335"
+                      />
+                    </svg>
+                  </button>
+                  <button
+                    class="flex-1 h-[52px] bg-white border border-slate-200 rounded-[14px] flex items-center justify-center btn-hover touch-target shadow-sm"
+                  >
+                    <svg
+                      width="20"
+                      height="20"
+                      viewBox="0 0 24 24"
+                      fill="black"
+                    >
+                      <path
+                        d="M17.05 20.28c-.98.95-2.05.88-3.08.4-1.09-.5-2.08-.48-3.24.02-1.44.62-2.2.44-3.06-.4C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.78 1.18-.19 2.31-.89 3.51-.84 1.43.06 2.52.69 3.2 1.76-2.88 1.76-2.4 5.33.52 6.53-.67 1.74-1.6 3.47-2.31 4.74zM13.06 4.25c.62-1.6 2.36-2.91 4.2-2.95.42 1.83-1.09 3.77-2.64 4.56-1.07.56-2.29.17-2.91-1.33.37-.1.75-.19 1.35-.28z"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p class="mt-[16px] text-[14px] font-medium text-slate-600">
+            Login - Step 2
+          </p>
         </div>
 
         <!-- Screen 0.5: Register -->
